Fix audioplayback of large frames and improve synchronization

In some cases audioframes are larger than buffer size,
we should be able to handle them.
As a result, the audio playback and audio synchronization
have been improved.

Task-number: QTBUG-113211
Change-Id: I6cd2650f9b66e924e152919a0974a9687b2d3bf4
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 98d8754756e0a3d43aabdb4637254085fa716a0d)