src/plugins/multimedia/ffmpeg/qffmpegresampler_p.h
@@ -33,13 +33,17 @@ public:
     QAudioBuffer resample(const AVFrame *frame);
     qint64 samplesProcessed() const { return m_samplesProcessed; }
     void setSampleCompensation(qint32 delta, quint32 distance);
-    bool isSampleCompensationActive() const;
+    qint32 activeSampleCompensationDelta() const;
+
+private:
+    int adjustMaxOutSamples(const AVFrame *frame);
 
 private:
     QAudioFormat m_outputFormat;
     SwrContext *resampler = nullptr;
     qint64 m_samplesProcessed = 0;
     qint64 m_endCompensationSample = std::numeric_limits<qint64>::min();
+    qint32 m_sampleCompensationDelta = 0;
 };
 
 }
